--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -1,7 +1,11 @@
 
 <mat-grid-list [cols]="2"> <!--rowHeight="5:3" gutterSize="5px"-->
   <mat-grid-tile>
-    <app-hub-card [route]="'/disability'">Disability</app-hub-card>
+    <app-hub-card [route]="'/welfare'">Welfare</app-hub-card>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <app-hub-card [route]="'/walkthrough'">Walkthrough</app-hub-card>
   </mat-grid-tile>
 
   <mat-grid-tile>
@@ -9,11 +13,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <app-hub-card [route]="'/welfare'">Welfare</app-hub-card>
-  </mat-grid-tile>
-
-  <mat-grid-tile>
-    <app-hub-card [route]="'/walkthrough'">Walkthrough</app-hub-card>
+    <app-hub-card [route]="'/enquiry'">Submit enquiry</app-hub-card>
   </mat-grid-tile>
 </mat-grid-list>
 
