--- a/src/app/walkthrough/question/question.component.scss
+++ b/src/app/walkthrough/question/question.component.scss
@@ -1,4 +1,7 @@
+@import '../../../styles/containers';
+@import '../../../styles/buttons';
+
 .question {
-  margin-left: 5px;
-  margin-right: 5px;
+  font: 45px Georgia, serif;
+  text-align: center;
 }
