--- a/src/app/redirect/redirect-button/redirect-button.component.html
+++ b/src/app/redirect/redirect-button/redirect-button.component.html
@@ -1,4 +1,5 @@
-
-<button mat-button (click)="buttonClicked()">
-  {{text}}
-</button>
+<mat-card>
+  <button mat-button (click)="buttonClicked()">
+    {{text}}
+  </button>
+</mat-card>
