--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -13,30 +13,12 @@ mat-toolbar {
   color: white;
 }
 
-/*
-.profile-button-container-1 {
-  width: 10%;
-}
-
-.profile-button-container-2 {
-  /* force 1:1 aspect ratio * /
-  width: 100%;
-  padding-bottom: 100%;
-  position: relative;
-}
-
-.profile-button-container-3 {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-*/
-
 .back-button {
   padding: 0;
   border: none;
   border-radius: 50%;
 }
 
+mat-icon {
+  color: white;
+}
