Completed a rundown of health and disability services

--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -1,19 +1,6 @@
-
-<mat-grid-list [cols]="2"> <!--rowHeight="5:3" gutterSize="5px"-->
-  <mat-grid-tile>
-    <app-hub-card [route]="'/welfare'">Welfare</app-hub-card>
-  </mat-grid-tile>
-
-  <mat-grid-tile>
-    <app-hub-card [route]="'/walkthrough'">Walkthrough</app-hub-card>
-  </mat-grid-tile>
-
-  <mat-grid-tile>
-    <app-hub-card [route]="'/health'">Health</app-hub-card>
-  </mat-grid-tile>
-
-  <mat-grid-tile>
-    <app-hub-card [route]="'/enquiry'">Submit enquiry</app-hub-card>
-  </mat-grid-tile>
-</mat-grid-list>
-
+<div class="vbox" style="justify-content: space-evenly;">
+  <app-hub-card [route]="'/health'" [nextRoute]="'/disability'">Walkthrough</app-hub-card>
+  <app-hub-card [route]="'/health'">Health Services Rundown</app-hub-card>
+  <app-hub-card [route]="'/disability'">Disability Services Rundown</app-hub-card>
+  <app-hub-card [route]="'/enquiry'">Submit General Enquiry</app-hub-card>
+</div>
